@@ -55,7 +55,7 @@ Datum ST_AsMVTGeom(PG_FUNCTION_ARGS)
 	geom_in = PG_GETARG_GSERIALIZED_P_COPY(0);
 	lwgeom_in = lwgeom_from_gserialized(geom_in);
 	if (PG_ARGISNULL(1))
-		elog(ERROR, "ST_AsMVTGeom: parameter bounds cannot be null");
+		elog(ERROR, "%s: parameter bounds cannot be null", __func__);
 	bounds = (GBOX *) PG_GETARG_POINTER(1);
 	extent = PG_ARGISNULL(2) ? 4096 : PG_GETARG_INT32(2);
 	buffer = PG_ARGISNULL(3) ? 256 : PG_GETARG_INT32(3);
@@ -83,10 +83,10 @@ Datum pgis_asmvt_transfn(PG_FUNCTION_ARGS)
 	PG_RETURN_NULL();
 #else
 	MemoryContext aggcontext;
-	struct mvt_agg_context *ctx;
+	mvt_agg_context *ctx;
 
 	if (!AggCheckCallContext(fcinfo, &aggcontext))
-		elog(ERROR, "pgis_asmvt_transfn: called in non-aggregate context");
+		elog(ERROR, "%s called in non-aggregate context", __func__);
 	MemoryContextSwitchTo(aggcontext);
 
 	if (PG_ARGISNULL(0)) {
@@ -102,11 +102,11 @@ Datum pgis_asmvt_transfn(PG_FUNCTION_ARGS)
 			ctx->geom_name = text_to_cstring(PG_GETARG_TEXT_P(4));
 		mvt_agg_init_context(ctx);
 	} else {
-		ctx = (struct mvt_agg_context *) PG_GETARG_POINTER(0);
+		ctx = (mvt_agg_context *) PG_GETARG_POINTER(0);
 	}
 
 	if (!type_is_rowtype(get_fn_expr_argtype(fcinfo->flinfo, 1)))
-		elog(ERROR, "pgis_asmvt_transfn: parameter row cannot be other than a rowtype");
+		elog(ERROR, "%s: parameter row cannot be other than a rowtype", __func__);
 	ctx->row = PG_GETARG_HEAPTUPLEHEADER(1);
 
 	mvt_agg_transfn(ctx);
@@ -125,10 +125,11 @@ Datum pgis_asmvt_finalfn(PG_FUNCTION_ARGS)
 	elog(ERROR, "Missing libprotobuf-c");
 	PG_RETURN_NULL();
 #else
-	struct mvt_agg_context *ctx;
-	uint8_t *buf;
+	mvt_agg_context *ctx;
+	bytea *buf;
+	elog(DEBUG2, "%s called", __func__);
 	if (!AggCheckCallContext(fcinfo, NULL))
-		elog(ERROR, "pgis_asmvt_finalfn called in non-aggregate context");
+		elog(ERROR, "%s called in non-aggregate context", __func__);
 
 	if (PG_ARGISNULL(0))
 	{
@@ -137,8 +138,76 @@ Datum pgis_asmvt_finalfn(PG_FUNCTION_ARGS)
 		PG_RETURN_BYTEA_P(emptybuf);
 	}
 
-	ctx = (struct mvt_agg_context *) PG_GETARG_POINTER(0);
+	ctx = (mvt_agg_context *) PG_GETARG_POINTER(0);
 	buf = mvt_agg_finalfn(ctx);
 	PG_RETURN_BYTEA_P(buf);
 #endif
 }
+
+PG_FUNCTION_INFO_V1(pgis_asmvt_serialfn);
+Datum pgis_asmvt_serialfn(PG_FUNCTION_ARGS)
+{
+#ifndef HAVE_LIBPROTOBUF
+	elog(ERROR, "Missing libprotobuf-c");
+	PG_RETURN_NULL();
+#else
+	mvt_agg_context *ctx;
+	elog(DEBUG2, "%s called", __func__);
+	if (!AggCheckCallContext(fcinfo, NULL))
+		elog(ERROR, "%s called in non-aggregate context", __func__);
+
+	if (PG_ARGISNULL(0))
+	{
+		bytea *emptybuf = palloc(VARHDRSZ);
+		SET_VARSIZE(emptybuf, VARHDRSZ);
+		PG_RETURN_BYTEA_P(emptybuf);
+	}
+
+	ctx = (mvt_agg_context *) PG_GETARG_POINTER(0);
+	PG_RETURN_BYTEA_P(mvt_ctx_serialize(ctx));
+#endif
+}
+
+
+PG_FUNCTION_INFO_V1(pgis_asmvt_deserialfn);
+Datum pgis_asmvt_deserialfn(PG_FUNCTION_ARGS)
+{
+#ifndef HAVE_LIBPROTOBUF
+	elog(ERROR, "Missing libprotobuf-c");
+	PG_RETURN_NULL();
+#else
+	MemoryContext aggcontext, oldcontext;
+	elog(DEBUG2, "%s called", __func__);
+	if (!AggCheckCallContext(fcinfo, &aggcontext))
+		elog(ERROR, "%s called in non-aggregate context", __func__);
+
+	oldcontext = MemoryContextSwitchTo(aggcontext);
+	mvt_agg_context *ctx = mvt_ctx_deserialize(PG_GETARG_BYTEA_P(0));
+	MemoryContextSwitchTo(oldcontext);
+
+	PG_RETURN_POINTER(ctx);
+#endif
+}
+
+PG_FUNCTION_INFO_V1(pgis_asmvt_combinefn);
+Datum pgis_asmvt_combinefn(PG_FUNCTION_ARGS)
+{
+#ifndef HAVE_LIBPROTOBUF
+	elog(ERROR, "Missing libprotobuf-c");
+	PG_RETURN_NULL();
+#else
+	MemoryContext aggcontext, oldcontext;
+	elog(DEBUG2, "%s called", __func__);
+	if (!AggCheckCallContext(fcinfo, &aggcontext))
+		elog(ERROR, "%s called in non-aggregate context", __func__);
+
+	mvt_agg_context *ctx, *ctx1, *ctx2;
+	ctx1 = (mvt_agg_context*)PG_GETARG_POINTER(0);
+	ctx2 = (mvt_agg_context*)PG_GETARG_POINTER(1);
+	oldcontext = MemoryContextSwitchTo(aggcontext);
+	ctx = mvt_ctx_combine(ctx1, ctx2);
+	MemoryContextSwitchTo(oldcontext);
+	PG_RETURN_POINTER(ctx);
+#endif
+}
+
